# macproqc-helpers

./: .dockerignore  .gitignore  Dockerfile  README.md  environment.yml  main.nf  nextflow.config  nextflow_schema.json  pyproject.toml  requirements.txt
.github/: build_test_publish.yml
.github/workflows/: publish-ghcr.yml
docu/: parameters_schema.html  parameters_schema.md
example_configurations/: README.md  mcquac.json  spike_ins.csv
src/: feature_detection.nf  mzqc.nf  pia.nf  retrieve_spike_ins.nf  visualization.nf
src/identification/: comet.nf
src/io/: combine_metric_hdf5.nf  output_processing_success.nf  raw_file_conversion.nf
src/macproqc_helpers/: __main__.py  cli.py
src/macproqc_helpers/helpers/: __init__.py  adjust_comet_params.py  collect_metrics_from_bruker.py  collect_metrics_from_featurexml.py  collect_metrics_from_mzml.py  collect_metrics_from_pia_output.py  collect_metrics_from_thermo.py  collect_spikein_metrics.py  combine_hdf5_files.py  convert_mztab_to_idxml.py  create_thermorawfileparser_xic_config.py  extract_xic_bruker.py  hdf5_to_mzqc.py  visualization.py
src/macproqc_helpers/utils/: __init__.py  hdf5.py
src/metrics/: ms_run_metrics.nf
